<resources>
    <string name="app_name">MasterDoer</string>
    <string name="tasks_name">Tasks</string>
    <string name="profile_name">Profile</string>
    <string name="edit_profile_name">Edit profile</string>
    <string name="add_task_name">Add a new task</string>
    <string name="add_project_name">Add a new project</string>
    <string name="action_settings">Settings</string>

    <string name="auth_title">Welcome to MasterDoer</string>
    <string name="auth_text_intro">Connect to get on the path of \n becoming a true Master Doer\n</string>
    <string name="auth_subscribe_tab">Subscribe</string>
    <string name="auth_login_tab">Log in</string>
    <string name="auth_hint_name">Name</string>
    <string name="auth_hint_email">Email</string>
    <string name="auth_hint_password">Password</string>
    <string name="auth_signup_button">Sign up</string>
    <string name="auth_login_button">Log in</string>

    <string name="loading">Loading</string>

    <string name="today_text">Today</string>
    <string name="week_text">This week</string>

    <string name="add_project_description">Add a new project to your list</string>
    <string name="no_project_message">Looks like you don\'t have a project yet.\n How sad!</string>
    <string name="add_new_project">Add a new project</string>

    <string name="project_dialog_hint">New project\'s name</string>
    <string name="project_dialog_title">Add a new project</string>
    <string name="project_dialog_add">Add</string>
    <string name="project_dialog_cancel">Cancel</string>
    <string name="project_date_text">Created on:</string>
    <string name="add_project_update_button">Update</string>
    <string name="add_project_empty_name">The project\'s name is empty.</string>

    <string name="add_project_date_title">Creation date:</string>
    <string name="add_project_color_title">Color:</string>

    <string name="add_task_description">Add a new task to your project</string>
    <string name="no_task_message">No tasks in this project yet!</string>
    <string name="no_task_today_message">Nothing to do today. Have a nice day!</string>
    <string name="no_task_week_message">Nothing to do this week for now!</string>

    <string name="task_dialog_hint">New task\'s name</string>
    <string name="task_dialog_title">Add a new task</string>
    <string name="task_dialog_add">Add</string>
    <string name="task_dialog_cancel">Cancel</string>

    <string name="add_task_dialog_datepicker_title">Set a due date:</string>
    <string name="add_task_priority_title">Priority:</string>
    <string name="add_task_priority_desc_none">None</string>
    <string name="add_task_priority_desc_important">Important</string>
    <string name="add_task_priority_desc_very_important">Very important</string>
    <string name="add_task_project_title">Project:</string>
    <string name="add_task_reminder_title">Reminder:</string>
    <string name="add_task_date_picker_hint">No date</string>
    <string name="add_task_reminder_hint">No reminder</string>
    <string name="add_task_button_cancel">Cancel</string>
    <string name="add_task_button_add">Add</string>
    <string name="add_task_update_button">Update</string>
    <string name="add_task_empty_name">The task\'s name is empty</string>
    <string name="add_task_no_project_today_week">You haven\'t created a project yet. You can do so by going back the project list.</string>

    <string name="edit_date_dialog_datepicker_title">Set a due date:</string>
    <string name="edit_date_dialog_cancel">Cancel</string>
    <string name="edit_date_dialog_set">Set</string>

    <string name="reminder_title">Reminder</string>
    <string name="edit_reminder_dialog_datepicker_title">Set a reminder date for this task:</string>
    <string name="edit_reminder_dialog_cancel">Cancel</string>
    <string name="edit_reminder_dialog_set">Set</string>
    <string name="title_activity_nav_drawer">nav_drawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">Sign in</string>

    <string name="no_user_name_text">No User Name</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="profile_edit_text">Edit</string>

    <string name="edit_profile_user_name_hint">Your name</string>
    <string name="edit_profile_user_email_hint">Your email</string>
    <string name="edit_profile_button_cancel">Cancel</string>
    <string name="edit_profile_button_update">Update</string>

    <string name="about_thankyou"><i>Thank you for using my app! :)</i></string>
    <string name="about_intro_text">This app is an Open Source project\n developed by <b>Thibaut Massard</b></string>
    <string name="about_website_title"><b>Website:</b></string>
    <string name="about_github_title"><b>Github:</b></string>
    <string name="about_website_address">http://thibautmassard.com</string>
    <string name="about_github_address">https://github.com/thib146</string>
    <string name="about_version_number">v2.0</string>
</resources>