<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/add_task_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:hint="@string/task_dialog_hint"
        android:imeOptions="actionDone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/add_task_dialog_datepicker_title"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/add_task_date_edit_text"
            android:inputType="date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:hint="@string/add_task_date_picker_hint"
            android:imeOptions="actionDone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/add_task_priority_title"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"/>

        <NumberPicker
            android:id="@+id/add_task_priority_picker"
            android:layout_width="wrap_content"
            android:layout_height="50dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/add_task_project_title"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"/>

        <Spinner
            android:id="@+id/add_task_project_spinner"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:listitem="coucou"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/add_task_reminder_title"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/add_task_reminder_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:hint="@string/add_task_reminder_hint"
            android:imeOptions="actionDone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_task_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_task_button_cancel"/>

        <Button
            android:id="@+id/add_task_button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:text="@string/add_task_button_add"/>
    </LinearLayout>

    <!--<DatePicker-->
        <!--android:id="@+id/datePicker"-->
        <!--android:startYear="2017"-->
        <!--android:layout_gravity="center"-->
        <!--android:datePickerMode="spinner"-->
        <!--android:calendarViewShown="false"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="100dp" />-->

</LinearLayout>