<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/add_project_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:hint="@string/project_dialog_hint"
        android:imeOptions="actionDone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/add_project_date_title"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/add_project_date_edit_text"
            android:inputType="date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:focusable="false"
            android:enabled="false"
            android:imeOptions="actionDone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/add_project_color_title"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"/>

        <ImageView
            android:id="@+id/project_color_green"
            android:background="@drawable/ic_crop_square_transparent_24dp"
            android:scaleType="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fiber_manual_record_black_24dp"/>
        <ImageView
            android:id="@+id/project_color_blue"
            android:background="@drawable/ic_crop_square_transparent_24dp"
            android:scaleType="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fiber_manual_record_blue_24dp"/>
        <ImageView
            android:id="@+id/project_color_yellow"
            android:background="@drawable/ic_crop_square_transparent_24dp"
            android:scaleType="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fiber_manual_record_yellow_24dp"/>
        <ImageView
            android:id="@+id/project_color_red"
            android:background="@drawable/ic_crop_square_transparent_24dp"
            android:scaleType="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fiber_manual_record_red_24dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_project_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_task_button_cancel"/>

        <Button
            android:id="@+id/add_project_button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:text="@string/add_task_button_add"/>
    </LinearLayout>

</LinearLayout>