<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:id="@+id/today_item"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/today_picto"
                android:src="@drawable/ic_today_black_24dp"
                android:layout_gravity="center"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/today_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:textSize="19sp"
                    android:text="@string/today_text" />
                <TextView
                    android:id="@+id/today_number_tasks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="3dp"
                    android:paddingStart="3dp"
                    android:paddingRight="3dp"
                    android:paddingEnd="3dp"
                    tools:text="3" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/main_divider1"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#DDDDDD"/>

        <LinearLayout
            android:layout_width="0dp"
            android:id="@+id/week_item"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/week_picto"
                android:src="@drawable/ic_date_range_black_24dp"
                android:layout_gravity="center"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/week_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:textSize="19sp"
                    android:text="@string/week_text" />
                <TextView
                    android:id="@+id/week_number_tasks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="3dp"
                    android:paddingStart="3dp"
                    android:paddingRight="3dp"
                    android:paddingEnd="3dp"
                    tools:text="1239" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/main_divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DDDDDD"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </android.support.v4.widget.SwipeRefreshLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_add_project"
            android:contentDescription="@string/add_project_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:scaleType="center"
            android:layout_margin="16dp"
            android:src="@drawable/fab_plus"
            app:backgroundTint="@color/colorAccent"
            app:borderWidth="0dp"
            app:elevation="6dp"
            app:fabSize="normal"
            app:pressedTranslationZ="12dp" />

        <TextView
            android:id="@+id/error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:visibility="gone"
            tools:text="Error message" />
    </FrameLayout>

</LinearLayout>